Fix product image size on mobile

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -39,7 +39,7 @@
 @media (max-width: 576px) {
     .product-body .quickview-img {
         height: 25rem;
-        width: 80%;
+        width: 100%;
     }
 
     .product-body #options {
